--- a/package.json
+++ b/package.json
@@ -1,17 +1,8 @@
 {
-  "name": "@kelvdra/baileys",
-  "type": "module",
-  "version": "1.0.2-rc.3",
-  "description": "Baileys fork whiskeysockets modified by kelvdra.",
+  "name": "@kangfarrel/felzar-baileys",
+  "version": "7.1.1",
+  "description": "WhatsApp API Modification By Frrlz",
   "keywords": [
-    "baileys",
-    "baileys-mod",
-    "bails",
-    "whiskeysockets/baileys",
-    "whatsapp",
-    "meta",
-    "Hydra",
-    "Kelvdra",
     "whatsapp",
     "js-whatsapp",
     "whatsapp-api",
@@ -19,21 +10,19 @@
     "whatsapp-chat",
     "whatsapp-group",
     "automation",
-    "multi-device",
-    "modder"
+    "multi-device"
   ],
-  "homepage": "https://github.com/WhiskeySockets/Baileys/",
+  "homepage": "https://github.com/kangfarrel/felzar-baileys",
   "repository": {
-    "url": "git@github.com:WhiskeySockets/Baileys.git"
+    "url": "git@github.com:kangfarrel/felzar-baileys.git"
   },
   "license": "MIT",
-  "author": "Kelvdra",
+  "author": "@kangfarrel",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": [
-    "lib/**/*",
-    "WAProto/**/*",
-    "engine-requirements.js"
+    "lib/*",
+    "WAProto/*"
   ],
   "scripts": {
     "build:all": "npm run build && npm run build:docs",
@@ -55,64 +44,61 @@
     "test:e2e": "node --experimental-vm-modules ./node_modules/.bin/jest --testMatch '**/*.test-e2e.ts'"
   },
   "dependencies": {
-    "@cacheable/node-cache": "^1.4.0",
+    "@adiwajshing/keyed-db": "^0.2.4",
     "@hapi/boom": "^9.1.3",
-    "async-mutex": "^0.5.0",
-    "libsignal": "git+https://github.com/whiskeysockets/libsignal-node",
-    "lru-cache": "^11.1.0",
-    "music-metadata": "^11.7.0",
-    "p-queue": "^9.0.0",
+    "@adiwajshing/eslint-config": "github:whiskeysockets/eslint-config",
+    "async-lock": "^1.4.1",
+    "audio-decode": "^2.1.3",
+    "axios": "^1.3.3",
+    "cache-manager": "^5.7.6",
+    "futoin-hkdf": "^1.5.1",
+    "libphonenumber-js": "^1.10.20",
+    "libsignal": "github:WhiskeySockets/libsignal-node",
+    "music-metadata": "^7.12.3",
+    "node-cache": "^5.1.2",
     "pino": "^9.6",
     "protobufjs": "^7.2.4",
+    "uuid": "^10.0.0",
     "ws": "^8.13.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.31.0",
-    "@types/jest": "^30.0.0",
-    "@types/node": "^20.9.0",
+    "@types/got": "^9.6.11",
+    "@types/jest": "^27.5.1",
+    "@types/node": "^16.0.0",
+    "@types/sharp": "^0.29.4",
     "@types/ws": "^8.0.0",
-    "@typescript-eslint/eslint-plugin": "^8",
-    "@typescript-eslint/parser": "^8",
-    "@whiskeysockets/eslint-config": "^1.0.0",
-    "conventional-changelog": "^7.1.1",
-    "conventional-changelog-angular": "^8.0.0",
-    "esbuild-register": "^3.6.0",
-    "eslint": "^9",
-    "eslint-config-prettier": "^10.1.2",
-    "eslint-plugin-prettier": "^5.4.0",
-    "jest": "^30.0.5",
-    "jimp": "^1.6.0",
-    "jiti": "^2.4.2",
-    "json": "^11.0.0",
+    "conventional-changelog-cli": "^2.2.2",
+    "eslint": "^8.0.0",
+    "jest": "^27.0.6",
+    "jimp": "^0.16.1",
     "link-preview-js": "^3.0.0",
-    "lru-cache": "^11.1.0",
     "open": "^8.4.2",
-    "pino-pretty": "^13.1.1",
-    "prettier": "^3.5.3",
-    "protobufjs-cli": "^1.1.3",
+    "qrcode-terminal": "^0.12.0",
     "release-it": "^15.10.3",
-    "ts-jest": "^29.4.0",
-    "tsc-esm-fix": "^3.1.2",
-    "tsx": "^4.20.3",
-    "typedoc": "^0.27.9",
-    "typedoc-plugin-markdown": "4.4.2",
-    "typescript": "^5.8.2"
+    "sharp": "^0.30.5",
+    "ts-jest": "^27.0.3",
+    "ts-node": "^10.8.1",
+    "typedoc": "^0.24.7",
+    "typescript": "^4.6.4",
+    "json": "^11.0.0"
   },
   "peerDependencies": {
-    "audio-decode": "^2.1.3",
-    "jimp": "^1.6.0",
+    "jimp": "^0.16.1",
     "link-preview-js": "^3.0.0",
-    "sharp": "*"
+    "qrcode-terminal": "^0.12.0",
+    "sharp": "^0.32.2"
   },
   "peerDependenciesMeta": {
-    "audio-decode": {
-      "optional": true
-    },
     "jimp": {
       "optional": true
     },
     "link-preview-js": {
+      "optional": true
+    },
+    "qrcode-terminal": {
+      "optional": true
+    },
+    "sharp": {
       "optional": true
     }
   },
